Fix Railway build and deployment issues